@@ -7,6 +7,8 @@ Date: 2021.08.25
     - Added sanity check for recipe ingredient counts
     - Used the above sanity check to find that Fabric was listed as craftable in the Constructor, instead of the Assembler.
     - Harvesting a plant while standing too close could lead to getting stuck. (#91)
+  Modding:
+    - Improved compatibility with Even Distribution (it was buggy with Splitters/Mergers) and added it to optional dependencies.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.7
 Date: 2021.08.20
